<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AppForge</string>
    <string name="create_new_project">Create New Project</string>
    <string name="open_project">Open Project</string>
    <string name="project_name">Project Name</string>
    <string name="project_package">Package Name (e.g., com.example.myapp)</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="run">Run</string>
    <string name="build">Build</string>
    <string name="file">File</string>
    <string name="edit">Edit</string>
    <string name="project">Project</string>
    <string name="new_file">New File</string>
    <string name="open_file">Open File</string>
    <string name="save_file">Save File</string>
    <string name="delete_file">Delete File</string>
    <string name="file_name">File Name</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="project_created">Project created successfully</string>
    <string name="file_saved">File saved successfully</string>
    <string name="build_started">Build started</string>
    <string name="build_success">Build completed successfully</string>
    <string name="build_failed">Build failed</string>
    <string name="permission_required">Storage permission is required</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="welcome_message">Welcome to AppForge - Build Android apps on your phone!</string>
    <string name="getting_started">Getting Started</string>
    <string name="create_first_project">Create your first project to get started</string>
    <string name="no_projects">No projects found</string>
    <string name="recent_projects">Recent Projects</string>
    <string name="templates">Templates</string>
    <string name="blank_activity">Blank Activity</string>
    <string name="basic_app">Basic App</string>
</resources>
